--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./public/styles/style.css">
     <title>Форма</title>
 </head>
 <body>
-    <script src="./scripts/index.js"></script>
+    <script src="./public/scripts/index.js"></script>
 </body>
 </html>
