feat: add base layout

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,50 @@
     <title>Форма</title>
 </head>
 <body>
+    <section class="section">
+        <div class="container">
+            <h1 class="title">Есть вопросы?</h1>
+            <p class="subtitle">Оставьте заявку и в течение часа с вами свяжется специалист!</p>
+        </div>
+    </section>
+    <section class="section">
+        <div class="container">
+            <form action="">
+                <div class="field">
+                    <label for="name" class="label">Имя</label>
+                    <div class="control">
+                        <input id="name" class="input" name="name" type="text" placeholder="Имя">
+                    </div>
+                </div>
+                <div class="field">
+                    <label for="email" class="label">Email</label>
+                    <div class="control">
+                        <input id="email" class="input" name="email" type="text" placeholder="Email">
+                    </div>
+                </div>
+                <div class="field">
+                    <label for="phone" class="label">Телефон</label>
+                    <div class="control">
+                        <input id="phone" class="input" name="phone" type="text" placeholder="Телефон">
+                    </div>
+                </div>
+                <div class="field">
+                    <label for="price" class="label">Цена</label>
+                    <div class="control">
+                        <input id="price" class="input" name="price" type="text" placeholder="Цена">
+                    </div>
+                </div>
+                <div class="field">
+                    <div class="control">
+                        <button class="button is-light" type="submit">Отправить</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+        
+    </section>
+
+
     <script src="./public/scripts/index.js"></script>
 </body>
 </html>
