feat: add form validation

--- a/public/index.html
+++ b/public/index.html
@@ -15,35 +15,40 @@
     </section>
     <section class="section">
         <div class="container">
-            <form action="">
+            <form>
                 <div class="field">
                     <label for="name" class="label">Имя</label>
                     <div class="control">
                         <input id="name" class="input" name="name" type="text" placeholder="Имя">
                     </div>
+                    <p class="help is-danger"></p>
                 </div>
                 <div class="field">
                     <label for="email" class="label">Email</label>
                     <div class="control">
                         <input id="email" class="input" name="email" type="text" placeholder="Email">
                     </div>
+                    <p class="help is-danger"></p>
                 </div>
                 <div class="field">
                     <label for="phone" class="label">Телефон</label>
                     <div class="control">
                         <input id="phone" class="input" name="phone" type="text" placeholder="Телефон">
                     </div>
+                    <p class="help is-danger"></p>
                 </div>
                 <div class="field">
                     <label for="price" class="label">Цена</label>
                     <div class="control">
                         <input id="price" class="input" name="price" type="text" placeholder="Цена">
                     </div>
+                    <p class="help is-danger"></p>
                 </div>
                 <div class="field">
                     <div class="control">
                         <button class="button is-light" type="submit">Отправить</button>
                     </div>
+                    <p class="help is-danger"></p>
                 </div>
             </form>
         </div>
